manifests/cluster-addons/media/seerr/templates/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr-lan
  namespace: media
  labels:
    l2-announce: 'true'
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
