manifests/cluster-addons/media/seerr/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seerr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: seerr

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '5055'
              protocol: TCP

    # TODO: fix this
    #   - fromCIDR:
    #       - 192.168.50.0/24 # wifi vlan
    #       - 192.168.80.0/24 # media vlan
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: '5055'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: '7878'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

    - toFQDNs:
        - matchName: 'api.themoviedb.org'
        - matchName: 'api.github.com'
        - matchName: 'api.radarr.video'
        - matchName: 'gravatar.com'
        - matchPattern: '*.algolia.net'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
